Practice connection template to data base

--- a/Study Bud/devsearch/projects/templates/projects/projects.html
+++ b/Study Bud/devsearch/projects/templates/projects/projects.html
@@ -1,5 +1,27 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<p>This are all the projects.</p>
+<h1>Projects</h1>
+
+<table>
+    <tr>
+        <th>ID</th>
+        <th>Project</th>
+        <th>Total Votes</th>
+        <th>Positive Votes</th>
+        <th>Date</th>
+        <th></th>
+    </tr>
+    {% for project in projects  %}
+    <tr>
+        <td>{{project.id}}</td>
+        <td>{{project.title}}</td>
+        <td>{{project.vote_total}}</td>
+        <td>{{project.vote_ratio}}%</td>
+        <td>{{project.created}}</td>
+        <td><a href="{% url 'project' project.id %}">View</a></td>
+    </tr>
+    {% endfor %}
+</table>
+
 {%  endblock %}
