--- a/Study Bud/devsearch/templates/navbar.html
+++ b/Study Bud/devsearch/templates/navbar.html
@@ -1,3 +1,5 @@
-<h1>Logo</h1>
+{% load static %}
+
+<img src="{%  static 'images/logo.svg' %}" alt="A picture of my logo, which is described by the text devsearch and a mignifing glass focusing on the avat of a person.">
 <a href="{%  url 'create-project' %}">Add Project</a>
 <hr>
