--- a/Study Bud/devsearch/templates/main.html
+++ b/Study Bud/devsearch/templates/main.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 
 <html>
     <head>
@@ -7,7 +8,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="{% static 'styles/main.css' %}">
     </head>
     <body>
         {% include 'navbar.html' %}
