--- a/Study Bud/devsearch/users/templates/users/user-profile.html
+++ b/Study Bud/devsearch/users/templates/users/user-profile.html
@@ -13,21 +13,37 @@
               <p class="dev__title">{{profile.short_intro|slice:"60"}}</p>
               <p class="dev__location">{{profile.location}}</p>
               <ul class="dev__social">
+                
+                {% if profile.social_github %}
                 <li>
-                  <a title="Github" href="{{profile.social_github.url}}" target="_blank"><i class="im im-github"></i></a>
+                  <a title="Github" href="{{profile.social_github}}" target="_blank"><i class="im im-github"></i>Git</a>
                 </li>
+                {% endif %}
+
+                {% if profile.social_youtube %}
                 <li>
-                  <a title="Stackoverflow" href="#" target="_blank"><i class="im im-stackoverflow"></i></a>
+                  <a title="YouTube" href="{{profile.social_youtube}}" target="_blank"><i class="im im-stackoverflow"></i>YouTube</a>
                 </li>
+                {% endif %}
+
+                {% if profile.social_twitter %}
                 <li>
-                  <a title="Twitter" href="{{profile.social_twitter.url}}" target="_blank"><i class="im im-twitter"></i></a>
+                  <a title="Twitter" href="{{profile.social_twitter}}" target="_blank"><i class="im im-twitter">Twit</i></a>
                 </li>
+                {% endif %}
+
+                {% if profile.social_linkedin %}
                 <li>
-                  <a title="LinkedIn" href="{{profile.social_linkedin.url}}" target="_blank"><i class="im im-linkedin"></i></a>
+                  <a title="LinkedIn" href="{{profile.social_linkedin}}" target="_blank"><i class="im im-linkedin"></i>Linkedin</a>
                 </li>
+                {% endif %}
+
+                {% if profile.social_website %}
                 <li>
-                  <a title="Personal Website" href="#" target="_blank"><i class="im im-globe"></i></a>
+                  <a title="Personal Website" href="rofile.social_website" target="_blank"><i class="im im-globe"></i>WebSite</a>
                 </li>
+                {% endif %}
+
               </ul>
               <a href="#" class="btn btn--sub btn--lg">Send Message </a>
             </div>
@@ -41,9 +57,9 @@
           <div class="devInfo">
             <h3 class="devInfo__title">Skills</h3>
             <div class="devInfo__skills">
-              {%  for skill in profile.skill_set.all %}
+              {%  for skill in top_skills %}
               <div class="devSkill">
-                <h4 class="devSkill__title">{{skill}}</h4>
+                <h4 class="devSkill__title">{{skill.name}}</h4>
                 <p class="devSkill__info">
                   {{skill.description}}
                 </p>
@@ -53,11 +69,11 @@
 
               <h3 class="devInfo__subtitle">Other Skills</h3>
               <div class="devInfo__otherSkills">
-
+                {% for skill in  other_skills %}
                 <span class="tag tag--pill tag--sub tag--lg">
-                  <small>Figma</small>
+                  <small>{{skill.name}}</small>
                 </span>
-
+                {% endfor %}
               </div>
             </div>
           </div>
@@ -69,11 +85,11 @@
                {%  for project in profile.project_set.all %} 
               <div class="column">
                 <div class="card project">
-                  <a href="single-project.html" class="project">
+                  <a href="{% url 'project' project.id %}" class="project">
                     <img class="project__thumbnail" src="{{project.featured_image.url}}" alt="project thumbnail" />
                     <div class="card__body">
                       <h3 class="project__title">{{project.title}}</h3>
-                      <p><a class="project__author" href="profile.html">By {{profile.name}}</a></p>
+                      <p><a class="project__author" href="profile.html">By {{project.owner.name}}</a></p>
                       <p class="project--rating">
                         <span style="font-weight: bold;">{{project.vote_ratio}}%</span> Postitive
                         Feedback ({{project.vote_total}} Vote{{project.vote_total|pluralize:"s"}})
