--- a/Study Bud/devsearch/templates/main.html
+++ b/Study Bud/devsearch/templates/main.html
@@ -21,12 +21,21 @@
     <body>
         {% include 'navbar.html' %}
 
-        {% if messages %}
+        <!-- {% if messages %}
         <ul class="messages">
          {% for message in messages %}
         <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
          {% endfor %}
         </ul>
+        {% endif %} -->
+
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert--{{message.tags}}" >
+            <p class="alert__message">{{message}}</p>
+            <button class="alert__close">x</button>
+        </div>
+        {% endfor %}
         {% endif %}
 
         {%  block content %}
@@ -34,6 +43,7 @@
         {% endblock content %}
 
         <p>Footer</p>
-        <script src="" async defer></script>
+
     </body>
+    <script src="{% static 'uikit/app.js' %}"></script>
 </html>
