--- a/Study Bud/devsearch/templates/main.html
+++ b/Study Bud/devsearch/templates/main.html
@@ -31,9 +31,11 @@
 
         {% if messages %}
         {% for message in messages %}
-        <div class="alert alert--{{message.tags}}" >
+        <div style="display: flex; justify-content: center;">
+        <div class="alert  alert--{{message.tags}}">
             <p class="alert__message">{{message}}</p>
             <button class="alert__close">x</button>
+        </div>
         </div>
         {% endfor %}
         {% endif %}
@@ -46,4 +48,5 @@
 
     </body>
     <script src="{% static 'uikit/app.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 </html>
