--- a/Study Bud/devsearch/users/templates/users/skill_form.html
+++ b/Study Bud/devsearch/users/templates/users/skill_form.html
@@ -3,6 +3,11 @@
 {% block content %}
 <h1>Create Skill</h1>
 <form action="#" method="POST">
+    {% csrf_token %}
+    {% for field in form %}
+    {{field.label}}
+    {{field}}
+    {% endfor %}
     <input type="submit" value="Submit" />
 </form>
 
