--- a/Study Bud/devsearch/templates/pagination.html
+++ b/Study Bud/devsearch/templates/pagination.html
@@ -2,23 +2,24 @@
 <div class="pagination">
   <ul class="container">
     {%  if queryset.has_previous %}
-    <li><a href="?page={{queryset.previous_page_number}}" class="btn page-link">&lt; Prev</a></li>
+    <li><a href="?page={{queryset.previous_page_number}}" class="btn page-link" data-page="{{queryset.previous_page_number}}">&lt; Prev</a></li>
     {% endif %}
 
     {% for page in custom_range %}
 
     {% if page == queryset.number %}
-    <li><a href="?page={{page}}" class="btn page-link btn--sub">{{page}}</a></li>
+    <li><a href="?page={{page}}" class="btn page-link btn--sub" data-page="{{page}}">{{page}}</a></li>
     {% else %}
-    <li><a href="?page={{page}}" class="btn page-link">{{page}}</a></li>
+    <li><a href="?page={{page}}" class="btn page-link" data-page="{{page}}">{{page}}</a></li>
     {% endif %}
 
     {% endfor %}
 
     {%  if queryset.has_next %}
-    <li><a href="?page={{queryset.next_page_number}}" class="btn page-link">Next &gt;</a></li>
+    <li><a href="?page={{queryset.next_page_number}}" class="btn page-link" data-page="{{queryset.next_page_number}}">Next &gt;</a></li>
     {% endif %}
 
   </ul>
 </div>
 {% endif %}
+
