Configure message form

--- a/Study Bud/devsearch/users/templates/users/message.html
+++ b/Study Bud/devsearch/users/templates/users/message.html
@@ -9,7 +9,7 @@
           <a href="profile.html" class="message__author">{{message.name}}</a>
           <p class="message__date">{{message.created}}</p>
           <div class="message__body">
-              {{message.body}}
+              {{message.body|linebreaksbr}}
           </div>
       </div>
     </div>
